Time Tracker Developer Org/src/objects/TimeTracker_StagingLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeTracker_Associated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TimeTracker Associated</label>
        <referenceTo>Time_Tracker__c</referenceTo>
        <relationshipLabel>TimeTracker Staging Line Items</relationshipLabel>
        <relationshipName>TimeTracker_Staging_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TimeTracker Staging Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Activity_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TSLI-{00000000}</displayFormat>
        <label>Time Tracker Staging Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeTracker Staging Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>